Add field to set the estimated talk time
The label is clickable to set the time. From 5 min before this time up
to the desired time the elapsed time fades to green. Within another five
minutes the label fades to red.

--- a/share/css/macos.css
+++ b/share/css/macos.css
@@ -27,6 +27,14 @@
     font-size: 32pt;
 }
 
+.time-warn {
+    animation: blinker 250ms cubic-bezier(.5, 0, 1, 1) infinite alternate;
+}
+@keyframes blinker {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
 #MenuBar,
 #MenuBar GtkMenuItem {
     color: #eee;
