Add a pane to show text annotations
This is an easy way to add notes to a talk. All text annotations on a
page are shown as a bullet list, which take up as much space as is
available.

--- a/share/css/default.css
+++ b/share/css/default.css
@@ -7,6 +7,14 @@
 #PresenterWindow GtkFrame {
 }
 
+#PresenterWindow GtkListBox {
+    background-color: transparent;
+}
+
+#PresenterWindow GtkListBox GtkLabel {
+    font-size: 130%;
+}
+
 #PresenterWindow GtkEntry {
 	font-size: 32pt;
 }
