--- a/share/css/macos.css
+++ b/share/css/macos.css
@@ -37,6 +37,15 @@
     font-size: 32pt;
 }
 
+.ett-reached {
+    color: #64c864;
+}
+.ett-info {
+    color: #FFEA09;
+}
+.ett-warn {
+    color: #FF0000;
+}
 .time-warn {
     animation: blinker 250ms cubic-bezier(.5, 0, 1, 1) infinite alternate;
 }
