css follow-up on ListBox -> TreeView change. Also fix different font sizes before and after resizing of some widgets by using absolute values.

--- a/share/css/default.css
+++ b/share/css/default.css
@@ -2,21 +2,21 @@
 }
 
 #PresenterWindow GtkPaned .pane-separator {
+    background-color: #ccc;
+    border-radius: 2px;
 }
 
 #PresenterWindow GtkFrame {
 }
 
-#PresenterWindow GtkListBox {
+#PresenterWindow GtkTreeView {
+    border-style: none;
     background-color: transparent;
-}
-
-#PresenterWindow GtkListBox GtkLabel {
-    font-size: 130%;
+    font-size: 16pt;
 }
 
 #PresenterWindow GtkEntry {
-	font-size: 14pt;
+    font-size: 22pt;
 }
 
 .frame-label {
