--- a/pympress/share/css/macos.css
+++ b/pympress/share/css/macos.css
@@ -21,6 +21,10 @@
     font-size: 22pt;
 }
 
+#ScribbleOverlay {
+  background: @bg_color
+}
+
 .frame-label {
     color: #eee;
     padding-bottom: 5px;
