--- a/pympress/share/presenter.glade
+++ b/pympress/share/presenter.glade
@@ -3,6 +3,7 @@
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkWindow" id="p_win">
     <property name="can_focus">False</property>
+    <property name="events">GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_STRUCTURE_MASK</property>
     <property name="title" translatable="yes">pympress presenter</property>
     <property name="window_position">center</property>
     <property name="default_width">1067</property>
@@ -11,6 +12,7 @@
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
     <signal name="key-press-event" handler="on_navigation" swapped="no"/>
     <signal name="delete-event" handler="save_and_quit" swapped="no"/>
+    <signal name="scroll-event" handler="on_navigation" swapped="no"/>
     <child>
       <object class="GtkBox" id="bigvbox">
         <property name="visible">True</property>
@@ -46,6 +48,7 @@
                         <property name="visible">True</property>
                         <property name="app_paintable">True</property>
                         <property name="can_focus">False</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
                         <signal name="draw" handler="on_draw" swapped="no"/>
                         <signal name="button-press-event" handler="on_link" swapped="no"/>
                         <signal name="configure-event" handler="on_configure_da" swapped="no"/>
