--- a/pympress/share/css/default.css
+++ b/pympress/share/css/default.css
@@ -1,6 +1,10 @@
 #p_win {
 }
 
+#c_win, #c_frame{
+    background-color: #000;
+}
+
 #p_win GtkPaned .pane-separator {
     background-color: #ccc;
     border-radius: 2px;
