--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -18,6 +18,7 @@
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
     <signal name="delete-event" handler="save_and_quit" swapped="no"/>
     <signal name="destroy" handler="save_and_quit" swapped="no"/>
+    <signal name="drag-data-received" handler="on_drag_drop" swapped="no"/>
     <signal name="key-press-event" handler="on_navigation" swapped="no"/>
     <signal name="scroll-event" handler="on_navigation" swapped="no"/>
     <signal name="window-state-event" handler="on_window_state_event" swapped="no"/>
