Names can be set in xml

--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -5,6 +5,7 @@
     <property name="can_focus">False</property>
     <child>
       <object class="GtkBox" id="scribble_overlay">
+        <property name="name">scribble_overlay</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
@@ -25,6 +26,7 @@
                 <signal name="motion-notify-event" handler="track_scribble" swapped="no"/>
                 <child>
                   <object class="GtkDrawingArea" id="scribble_p_da">
+                    <property name="name">scribble_p_da</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <signal name="draw" handler="draw_scribble" swapped="no"/>
