--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -10,6 +10,7 @@
     <property name="page_increment">1</property>
   </object>
   <object class="GtkWindow" id="p_win">
+    <property name="name">p_win</property>
     <property name="can_focus">False</property>
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_STRUCTURE_MASK | GDK_SCROLL_MASK</property>
     <property name="title" translatable="yes">pympress presenter</property>
@@ -58,6 +59,7 @@
                     <property name="obey_child">False</property>
                     <child>
                       <object class="GtkDrawingArea" id="p_da_cur">
+                        <property name="name">p_da_cur</property>
                         <property name="visible">True</property>
                         <property name="app_paintable">True</property>
                         <property name="can_focus">False</property>
@@ -103,6 +105,7 @@
                         <property name="obey_child">False</property>
                         <child>
                           <object class="GtkDrawingArea" id="p_da_pres">
+                            <property name="name">p_da_pres</property>
                             <property name="visible">True</property>
                             <property name="app_paintable">True</property>
                             <property name="can_focus">False</property>
@@ -140,6 +143,7 @@
                         <property name="obey_child">False</property>
                         <child>
                           <object class="GtkDrawingArea" id="p_da_next">
+                            <property name="name">p_da_next</property>
                             <property name="visible">True</property>
                             <property name="app_paintable">True</property>
                             <property name="can_focus">False</property>
