--- a/pympress/share/xml/content.glade
+++ b/pympress/share/xml/content.glade
@@ -2,6 +2,7 @@
 <interface>
   <!-- interface-requires gtk+ 3.2 -->
   <object class="GtkWindow" id="c_win">
+    <property name="name">c_win</property>
     <property name="width_request">1067</property>
     <property name="height_request">600</property>
     <property name="can_focus">True</property>
@@ -31,6 +32,7 @@
             <property name="vexpand">True</property>
             <child>
               <object class="GtkDrawingArea" id="c_da">
+                <property name="name">c_da</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
